[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entropy-flow"
version = "0.1.0"
description = "Entropy, divergence, and information-theoretic measures for probability distributions and time series"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = ["numpy>=1.20", "scipy>=1.7"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
